# proto-route

./: CHANGELOG.md  README.md  Test.hs  proto-route.cabal  report.html  stack.yaml
app/: Main.hs
proto/: protobuf1.proto  protobuf2.proto
src/: ProtoExports.hs  ProtoRoute.hs  Tui.hs
src/ProtoRoute/: Ghcid.hs  Message.hs
