name:                proto-route
version:             0.0.0
description:         Remote testing tool for protobuf endpoints
synopsis:            Remote testing tool for protobuf endpoints
homepage:            https://github.com/holmusk/proto-route
bug-reports:         https://github.com/holmusk/proto-route/issues
license:             MIT
license-file:        LICENSE
author:              Holmusk
maintainer:          tech@holmusk.com
copyright:           2018 Holmusk
category:            Protobuf, Network
build-type:          Custom
extra-doc-files:     README.md
                   , CHANGELOG.md
cabal-version:       1.24
tested-with:         GHC == 8.4.3
extra-source-files:  proto/protobuf1.proto

source-repository head
  type:                git
  location:            https://github.com/holmusk/proto-route.git

custom-setup
  setup-depends:
      Cabal
    , base
    , proto-lens-protoc

library
  hs-source-dirs:      src
  exposed-modules:     ProtoExports
                       ProtoRoute
                       ProtoRoute.Ghcid
                       ProtoRoute.Message
                       Proto.Protobuf1
                       Proto.Protobuf1_Fields
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5
                     , directory
                     , ghcid
                     , protobuf
                     , proto-lens
                     , proto-lens-protoc
                     , text
  default-language:    Haskell2010


executable proto-route
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , ghcid
                     , protobuf
                     , proto-lens
                     , proto-lens-protoc
                     , proto-route
                     , text
  default-language:    Haskell2010
